# english_vocabulary

./: .gitignore  AGENTS.md  CLAUDE.md  generate_icons.js  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
