[package]
name = "english-vocab-app"
version = "1.0.0"
description = "English Vocabulary Spaced Repetition App"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
